# see

./: .gitignore  Cargo.toml  PERSISTENCE_PLAN.md  README.md  SIGNING.md  Taskfile.yml  WORKFLOW_VISUALIZER.md  clippy.toml  dioxus-qeury-capture.rs  dioxus-query-examples.rs  dioxus.toml  fix-task-order-with-snapshot.plan.md  highlevelplan.md  input.css  release.toml  rustfmt.toml  sample.html  strip_comments  tailwind.config.js  workflow.json  workflow_2.json
cli/: Cargo.toml
cli/src/: handler.rs  main.rs
core/: Cargo.toml
core/schema/: README.md  workflow.schema.json
core/src/: embedded_data.rs  errors.rs  execution_integration_tests.rs  json_parser.rs  lib.rs  logging.rs  store.rs  store_singleton.rs  task_executor.rs  tracing.rs  types.rs
core/src/api/: defaults.rs  execution.rs  init.rs  initial_data.rs  input.rs  mod.rs  resume.rs  system_templates.rs
core/src/bridge/: audit.rs  execution.rs  mod.rs  task.rs  user_input.rs  workflow.rs
core/src/engine/: custom_engine.rs  execute.rs  execute_main.rs  handlers.rs  messages.rs  mod.rs
core/src/engine/handlers/: cli_command.rs  cursor_agent.rs
core/src/execution/: context.rs  mod.rs  safe_context.rs
core/src/persistence/: default_workflows.rs  mod.rs  models.rs  redb_store.rs  store.rs
core/src/persistence/store/: db_ops.rs  keys.rs  mod.rs  serialization.rs
core/src/utils/: mod.rs  safe_mutex.rs
core/src/validation/: mod.rs  schema.rs  types.rs  validator.rs
core/tests/: api_defaults_tests.rs  api_execution_tests.rs  api_init_tests.rs  api_resume_tests.rs  bridge_audit_tests.rs  bridge_execution_tests.rs  bridge_task_tests.rs  bridge_workflow_tests.rs  custom_engine_tests.rs  error_tests.rs  execution_context_pause_tests.rs  execution_context_unit_tests.rs  execution_integration_tests.rs  handler_persistence_tests.rs  integration_tests.rs  integration_user_input_tests.rs  phase6_persistence_tests.rs  resume_implementation_tests.rs  simple_pause_tests.rs  singleton_tests.rs  system_templates_tests.rs  task_executor_tests.rs  validation_tests.rs
core/tests/api/: defaults_tests.rs  execution_tests.rs  init_tests.rs  input_tests.rs  resume_tests.rs
core/tests/bridge/: audit_tests.rs  execution_tests.rs  task_tests.rs  user_input_tests.rs  workflow_tests.rs
dioxus_query/: Cargo.toml
dioxus_query/src/: invalidate.rs  lib.rs  mutation.rs  query.rs  query_key.rs  state.rs  utils.rs
dioxus_query/src/cache/: cleanup.rs  entry.rs  mod.rs  storage.rs  synchronization.rs
dioxus_query/tests/: cache_entry_tests.rs  invalidate_tests.rs  query_key_tests.rs
engine/: Cargo.toml  README.md
engine/examples/: nested.json  parallel.json  simple.json  user_input_deep.json  user_input_nested.json  user_input_parallel.json  user_input_simple.json
engine/src/: engine.rs  errors.rs  graph.rs  lib.rs  parser.rs  types.rs
engine/src/handlers/: cli_command.rs  cursor_agent.rs  custom.rs  mod.rs  user_input.rs
engine/src/tests/: engine_tests.rs  execution_tests.rs  graph_tests.rs  handler_tests.rs  integration.rs  mod.rs  parser_tests.rs
gui/: Cargo.toml  Entitlements.plist  tailwind.config.js
gui/assets/: tailwind.css
gui/react-flow-app/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
gui/react-flow-app/src/: App.tsx  WorkflowEditor.tsx  WorkflowVisualizer.tsx  index.css  types.ts
gui/react-flow-app/src/components/: NodeEditor.tsx  NodeEditorModal.tsx  Toolbar.tsx  dialog.tsx  input.tsx  select.tsx  text.tsx  textarea.tsx
gui/src/: app.rs  icons.rs  lib.rs  main.rs  router.rs  state.rs
gui/src/components/: alert.rs  badge.rs  button.rs  context_panel.rs  dialog.rs  errors_panel.rs  icon_button.rs  mod.rs  notification.rs  output_logs_panel.rs  settings_screen.rs  sidebar.rs  slideout.rs  status_bar.rs  step_navigator.rs  toast.rs  workflow_info_card.rs  workflow_progress.rs
gui/src/components/forms/: mod.rs  text_input.rs  textarea_input.rs  user_input_form.rs  validation_message.rs
gui/src/components/ui/: mod.rs  (+7 more)
gui/src/hooks/: mod.rs  use_app_state.rs
gui/src/layout/: app.rs  mod.rs  router.rs  sidebar.rs
gui/src/pages/: home.rs  mod.rs
gui/src/queries/: execution_queries.rs  history_queries.rs  mod.rs  prompt_queries.rs  settings_queries.rs  workflow_queries.rs
gui/src/services/: database.rs  execution.rs  history.rs  mod.rs  prompt.rs  settings.rs  workflow.rs
gui/src/state/: history_state.rs  mod.rs  prompt_state.rs  settings_state.rs  ui_state.rs  workflow_state.rs
persistence/: Cargo.toml
persistence/src/: error.rs  errors.rs  lib.rs  logging.rs  types.rs
persistence/src/db/: connection.rs  mod.rs  schema.rs
persistence/src/instance/: coordinator.rs  manager.rs  mod.rs
persistence/src/models/: ai_prompt.rs  audit.rs  enums.rs  execution.rs  mod.rs  prompt.rs  setting.rs  settings.rs  system_prompt.rs  system_workflow.rs  task.rs  task_execution.rs  user_input_request.rs  user_prompt.rs  workflow.rs  workflow_execution.rs
persistence/src/store/: ai_prompts.rs  audit.rs  execution.rs  lib.rs  mod.rs  prompt.rs  prompts.rs  settings.rs  system_prompt.rs  system_workflow.rs  task.rs  task_executions.rs  user_input.rs  user_prompts.rs  utils.rs  workflow.rs  workflow_executions.rs  workflows.rs
persistence/tests/: audit_tests.rs  concurrency_tests.rs  enums_tests.rs  errors_tests.rs  execution_tests.rs  integration_tests.rs  lib.rs  logging_tests.rs  prompt_tests.rs  settings_tests.rs  task_tests.rs  utils_tests.rs  workflow_tests.rs
persistence/tests/common/: mod.rs
persistence/tests/db/: connection_tests.rs
persistence/tests/instance/: multi_instance_tests.rs
persistence/tests/models/: audit_tests.rs  enums_tests.rs  execution_tests.rs  prompt_tests.rs  settings_tests.rs  system_prompt_tests.rs  system_workflow_tests.rs  task_input_tests.rs  task_tests.rs  user_input_request_tests.rs  workflow_tests.rs
persistence/tests/operations/: task_tests.rs  workflow_tests.rs
persistence/tests/store/: audit_tests.rs  execution_tests.rs  prompt_tests.rs  settings_tests.rs  task_tests.rs  user_input_tests.rs  utils_tests.rs  workflow_tests.rs
(+391 files in other folders)
