[workspace]
members = [
  "core",
  "gui",
  "cli"
]
resolver = "2"

[workspace.lints.clippy]
# Enable pedantic lints for comprehensive code quality checking
pedantic = "warn"
cognitive_complexity = "warn"
type_complexity = "warn"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
