[workspace]
members = [
  "gui",
  "cli",
  "engine",
  "persistence",
  "core",
  "dioxus_query",
]
resolver = "2"

[workspace.lints.clippy]

pedantic = "warn"
cognitive_complexity = "warn"
type_complexity = "warn"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
