[package]
name = "s_e_e_cli"
version = "0.1.7"
edition = "2021"

[dependencies]
s_e_e_core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
