[package]
name = "see_core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
redb = "2.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs"] }
async-trait = "0.1"
tracing = "0.1"
dataflow-rs = "2.0.0"
datalogic-rs = "4.0"
bincode = "1.3"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
