[package]
name = "s_e_e_core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "tracing"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.0"
engine = { path = "../engine" }
persistence = { path = "../persistence" }
lazy_static = "1.4"
