[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
persistence = { path = "../persistence" }
engine = { path = "../engine" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-appender = "0.2"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.0"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
