[package]
name = "s_e_e_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
s_e_e_core = { path = "../core" }
dioxus = { version = "0.6", features = ["desktop", "router"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dark-light = "0.2.0"
rfd = "0.14"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"

# dx CLI specific dependencies
dioxus-desktop = "0.6"
