[package]
name = "s_e_e_gui"
version = "0.1.1"
edition = "2021"

[dependencies]
s_e_e_core = { path = "../core" }
s_e_e_engine = { path = "../engine" }
dioxus = { version = "0.6", features = ["desktop", "router"] }
s_e_e_dioxus_query = { path = "../dioxus_query" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dark-light = "0.2.0"
rfd = "0.14"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
image = "0.25"


dioxus-desktop = "0.6"

[package.metadata.bundle]
identifier = "com.s_e_e.workflow-engine"
name = "Speculative Execution Engine"
publisher = "Garunski"
icon = [
    "../icons/dist/png/32/see.png",
    "../icons/dist/png/128/see.png",
    "../icons/dist/png/256/see.png",
    "../icons/dist/macos/see.icns",
    "../icons/dist/windows/see.ico"
]
