[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32.0", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt", "sync"] }
tracing = "0.1"
lazy_static = "1.4"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
