[package]
name = "s_e_e_persistence"
version = "0.1.12"
edition = "2021"
description = "Persistence layer for S.E.E. workflow engine using SQLite with sqlx"

[dependencies]
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
